# serial-osc

./: .gitignore  README.MD  app.py  pyproject.toml
arduino/DHTtester/: DHTtester.ino
python-osc-client/: python-osc-client.py
vuo/: temp-color.vuo
